# astrotool-middleware

./: .gitignore  Dockerfile  README.md  generate_dev_image.sh  pyproject.toml  requirements.txt
libs/: astromodules-0.1-py3-none-any.32.whl  astromodules-0.1-py3-none-any.whl
src/astrotool_middleware/: __main__.py  main.py  middleware.py
src/astrotool_middleware/models/: __init__.py  abstract_middleware.py  process.py  process_file.py  rendering.py  session.py
src/astrotool_middleware/rpc/: __init__.py  main.py  miscellaneous.py  process.py  session.py
src/astrotool_middleware/utils/: utils.py
